tests/ui/typeck/unit-type-add-error-11771.stderr
error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/unit-type-add-error-11771.rs:5:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             `&f128` implements `Add<f128>`
             `&f128` implements `Add`
             `&f16` implements `Add<f16>`
             `&f16` implements `Add`
             `&f32` implements `Add<f32>`
             `&f32` implements `Add`
             `&f64` implements `Add<f64>`
             `&f64` implements `Add`
           and 56 others

error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/unit-type-add-error-11771.rs:10:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             `&f128` implements `Add<f128>`
             `&f128` implements `Add`
             `&f16` implements `Add<f16>`
             `&f16` implements `Add`
             `&f32` implements `Add<f32>`
             `&f32` implements `Add`
             `&f64` implements `Add<f64>`
             `&f64` implements `Add`
           and 56 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
